# -economic-research-assistant-agent

./: LICENSE  README.md  pyproject.toml
src/: main.py
src/schema/: __init__.py  schema.py
src/tools/: filesystem_manager.py  stata_interpreter.py
