[project]
name = "economic-research-assistant-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pystata (>=0.0.1,<0.0.2)",
    "stata-setup (>=0.1.3,<0.2.0)",
    "langgraph (>=0.4.3,<0.5.0)",
    "glob2 (>=0.7,<0.8)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "langchain-google-genai (>=2.1.4,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"